fixed utility nav spacing

--- a/gatsby-cmketech/src/assets/sass/components/_navigation.scss
+++ b/gatsby-cmketech/src/assets/sass/components/_navigation.scss
@@ -42,7 +42,7 @@
             background: $white;
             &.active {
                 color: $teal;
-                box-shadow: 0px 4px 0px #029395;
+                box-shadow: 0px 4px 0px $teal;
             }
         }
         &--secondary {
